<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vikiwahyudi.deteksigempadantsunami.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_gempa_terkini"
        android:name="com.vikiwahyudi.deteksigempadantsunami.ui.magnitude.MagnitudoFragment"
        android:label="@string/title_gempa_terkini"
        tools:layout="@layout/fragment_magnitudo"/>

    <fragment
        android:id="@+id/navigation_gempa_dirasakan"
        android:name="com.vikiwahyudi.deteksigempadantsunami.ui.dirasakan.DirasakanFragment"
        android:label="@string/title_gempa_dirasakan"
        tools:layout="@layout/fragment_dirasakan"/>

    <fragment
        android:id="@+id/navigation_edukasi"
        android:name="com.vikiwahyudi.deteksigempadantsunami.ui.edukasi.EdukasiFragment"
        android:label="@string/title_edukasi"
        tools:layout="@layout/fragment_edukasi" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.vikiwahyudi.deteksigempadantsunami.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>